--- a/cities.html
+++ b/cities.html
@@ -26,7 +26,8 @@
     <li>Istanbul (13,854,740)</li>
     <li>Karachi  (12,991,000)</li>
     <li>Mumbai   (12,478,447)</li>
-    <<li>made up city who cares</li>
+    <li>made up city who cares</li>
+    <li>another because yea</li>
   </ol>
 
 </body>
